--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Performance optimizations -->
   <script>
-    const domains = ['laos189-Zyora.online', 'laos189-Livra.online', 'laos189-Novira.online'];
+    const domains = ['laos189-Livra.online', 'laos189-Livra.online', 'laos189-Livra.online'];
     domains.forEach(domain => {
       const link = document.createElement('link');
       link.rel = 'dns-prefetch';
@@ -505,9 +505,9 @@
 
     // Enhanced server management
     const serverConfigs = [
-      { url: "https://laos189-Zyora.online", name: "เซิร์ฟเวอร์หลัก", priority: 1 },
+      { url: "https://laos189-Livra.online", name: "เซิร์ฟเวอร์หลัก", priority: 1 },
       { url: "https://laos189-Livra.online", name: "เซิร์ฟเวอร์สำรอง A", priority: 2 },
-      { url: "https://laos189-Novira.online", name: "เซิร์ฟเวอร์สำรอง B", priority: 3 }
+      { url: "https://laos189-Livra.online", name: "เซิร์ฟเวอร์สำรอง B", priority: 3 }
     ];
 
     // Shuffle servers with weighted randomization
