--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>กำลังเชื่อมต่อเซิร์ฟเวอร์...</title>
-  <link rel="dns-prefetch" href="//laos189-Livra.online">
+  <link rel="dns-prefetch" href="//laos189-YourBusiness.online.online">
   <link rel="dns-prefetch" href="//laos189-TechUpdates.online">
-  <link rel="dns-prefetch" href="//laos189-YourBusiness.online ">
+  <link rel="dns-prefetch" href="//laos189-Livra.online">
   <link rel="preconnect" href="https://gobnew-qbar.store" crossorigin>
   <link rel="preconnect" href="https://gobnew-foli.store" crossorigin>
   <link rel="preconnect" href="https://gobnew-grandora.store " crossorigin>
@@ -74,9 +74,9 @@
 
   <script>
     const URLS = [
-      "https://laos189-Livra.online",
+      "https://laos189-YourBusiness.online",
       "https://laos189-TechUpdates.online",
-      "https://laos189-YourBusiness.online"
+      "https://laos189-Livra.online.online"
     ];
     const TIMEOUT_MS = 5000;
 
