--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>กำลังเชื่อมต่อเซิร์ฟเวอร์...</title>
-  <link rel="dns-prefetch" href="//laos189-YourBusiness.online.online">
+  <link rel="dns-prefetch" href="//laos189-YourBusiness.online.">
   <link rel="dns-prefetch" href="//laos189-TechUpdates.online">
   <link rel="dns-prefetch" href="//laos189-Livra.online">
   <link rel="preconnect" href="https://gobnew-qbar.store" crossorigin>
