--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="dns-prefetch" href="//laos189-YourBusiness.online.">
   <link rel="dns-prefetch" href="//laos189-TechUpdates.online">
   <link rel="dns-prefetch" href="//laos189-Livra.online">
-  <link rel="preconnect" href="https://gobnew-qbar.store" crossorigin>
-  <link rel="preconnect" href="https://gobnew-foli.store" crossorigin>
-  <link rel="preconnect" href="https://gobnew-grandora.store " crossorigin>
+  <link rel="preconnect" href="https://laos189-YourBusiness.online" crossorigin>
+  <link rel="preconnect" href="https://laos189-TechUpdates.online" crossorigin>
+  <link rel="preconnect" href="https://laos189-Livra.online" crossorigin>
   <style>
     :root {
       --bg1:#0b0b0b; --bg2:#1a1a1a; --acc:#00e6ac; --soft:#ffffff22; --text:#eaeaea; --sub:#bdbdbd;
