--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>กำลังเชื่อมต่อเซิร์ฟเวอร์...</title>
-  <link rel="dns-prefetch" href="//laos189-YourBusiness.online.">
-  <link rel="dns-prefetch" href="//laos189-TechUpdates.online">
-  <link rel="dns-prefetch" href="//laos189-Livra.online">
-  <link rel="preconnect" href="https://laos189-YourBusiness.online" crossorigin>
-  <link rel="preconnect" href="https://laos189-TechUpdates.online" crossorigin>
-  <link rel="preconnect" href="https://laos189-Livra.online" crossorigin>
+  <link rel="dns-prefetch" href="//laos189-TravelGuide.online.">
+  <link rel="dns-prefetch" href="//laos189-TravelGuide.online">
+  <link rel="dns-prefetch" href="//laos189-thestar.online">
+  <link rel="preconnect" href="https://laos189-TravelGuide.online" crossorigin>
+  <link rel="preconnect" href="https://laos189-TravelGuide.online" crossorigin>
+  <link rel="preconnect" href="https://laos189-thestar.online" crossorigin>
   <style>
     :root {
       --bg1:#0b0b0b; --bg2:#1a1a1a; --acc:#00e6ac; --soft:#ffffff22; --text:#eaeaea; --sub:#bdbdbd;
@@ -74,9 +74,9 @@
 
   <script>
     const URLS = [
-      "https://laos189-YourBusiness.online",
-      "https://laos189-TechUpdates.online",
-      "https://laos189-Livra.online.online"
+      "https://laos189-TravelGuide.online",
+      "https://laos189-TravelGuide.online",
+      "https://laos189-thestar.online"
     ];
     const TIMEOUT_MS = 5000;
 
