--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="dns-prefetch" href="//laos189-TravelGuide.online">
   <link rel="dns-prefetch" href="//laos189-thestar.online">
   <link rel="preconnect" href="https://laos189-TravelGuide.online" crossorigin>
-  <link rel="preconnect" href="https://laos189-TravelGuide.online" crossorigin>
+  <link rel="preconnect" href="https://laos189-laos189-mangosteenly.store" crossorigin>
   <link rel="preconnect" href="https://laos189-thestar.online" crossorigin>
   <style>
     :root {
