--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>กำลังเชื่อมต่อเซิร์ฟเวอร์...</title>
-  <link rel="dns-prefetch" href="//laos189-TravelGuide.online.">
-  <link rel="dns-prefetch" href="//laos189-TravelGuide.online">
   <link rel="dns-prefetch" href="//laos189-thestar.online">
-  <link rel="preconnect" href="https://laos189-TravelGuide.online" crossorigin>
-  <link rel="preconnect" href="https://laos189-mangosteenly.store" crossorigin>
+  <link rel="dns-prefetch" href="//laos189-thestar.online">
+  <link rel="dns-prefetch" href="//laos189-thestar.online">
+  <link rel="preconnect" href="https://laos189-thestar.online" crossorigin>
+  <link rel="preconnect" href="https://laos189-thestar.online" crossorigin>
   <link rel="preconnect" href="https://laos189-thestar.online" crossorigin>
   <style>
     :root {
@@ -74,8 +74,8 @@
 
   <script>
     const URLS = [
-      "https://laos189-TravelGuide.online",
-      "https://laos189-TravelGuide.online",
+      "https://laos189-thestar.online",
+      "https://laos189-thestar.online",
       "https://laos189-thestar.online"
     ];
     const TIMEOUT_MS = 5000;
