--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>กำลังเชื่อมต่อเซิร์ฟเวอร์...</title>
   <link rel="dns-prefetch" href="//laos189-coconutly.store">
-  <link rel="dns-prefetch" href="//laos189-localroost.store">
+  <link rel="dns-prefetch" href="//laos189-siamroot.store">
   <link rel="dns-prefetch" href="//laos189-seedwave.store">
   <link rel="preconnect" href="https://laos189-coconutly.store" crossorigin>
-  <link rel="preconnect" href="https://laos189-localroost.store" crossorigin>
+  <link rel="preconnect" href="https://laos189-siamroot.store" crossorigin>
   <link rel="preconnect" href="https://laos189-seedwave.store" crossorigin>
   <style>
     :root {
@@ -75,7 +75,7 @@
   <script>
     const URLS = [
       "https://laos189-coconutly.store",
-      "https://laos189-localroost.store",
+      "https://laos189-siamroot.store",
       "https://laos189-seedwave.store"
     ];
     const TIMEOUT_MS = 5000;
