--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="dns-prefetch" href="//laos189-coconutly.store">
   <link rel="dns-prefetch" href="//laos189-siamroot.store">
   <link rel="dns-prefetch" href="//laos189-seedwave.store">
-  <link rel="preconnect" href="https://laos189-coconutly.store" crossorigin>
+  <link rel="preconnect" href="https://laos189-seedwave.store" crossorigin>
   <link rel="preconnect" href="https://laos189-siamroot.store" crossorigin>
   <link rel="preconnect" href="https://laos189-seedwave.store" crossorigin>
   <style>
