--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="dns-prefetch" href="//laos189-seedwave.store">
   <link rel="preconnect" href="https://laos189-seedwave.store" crossorigin>
   <link rel="preconnect" href="https://laos189-siamroot.store" crossorigin>
-  <link rel="preconnect" href="https://laos189-seedwave.store" crossorigin>
+  <link rel="preconnect" href="https://laos189-adop.store" crossorigin>
   <style>
     :root {
       --bg1:#0b0b0b; --bg2:#1a1a1a; --acc:#00e6ac; --soft:#ffffff22; --text:#eaeaea; --sub:#bdbdbd;
