--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>กำลังเชื่อมต่อเซิร์ฟเวอร์...</title>
-  <link rel="dns-prefetch" href="//laos189-coconutly.store">
+  <link rel="dns-prefetch" href="//laos189-adop.store">
   <link rel="dns-prefetch" href="//laos189-siamroot.store">
   <link rel="dns-prefetch" href="//laos189-seedwave.store">
   <link rel="preconnect" href="https://laos189-seedwave.store" crossorigin>
@@ -74,7 +74,7 @@
 
   <script>
     const URLS = [
-      "https://laos189-coconutly.store",
+      "https://laos189-adop.store",
       "https://laos189-siamroot.store",
       "https://laos189-seedwave.store"
     ];
